--- a/_config.yml
+++ b/_config.yml
@@ -6,15 +6,16 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Shimer's TA showreel
+title: Shimer's backyard
 email: amaurot_ff@sjtu.edu.cn
 description: Welcome! ^w^
 words: Thank you for your patience!
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site
+url: "" # the base hsostname & protocol for your site
 # twitter_username: hemang_kumar
 # github_username:  hemangsk
-paginate: 5
+post_assert_folder: true
+paginate: 4
 theme-dark: false #Set to true to change to dark website theme
 
 plugins: [jekyll-paginate, kramdown]
